[tool.poetry]
name = "imbalanced-clustering"
version = "0.1.0"
description = "Clustering metrics for imbalanced datasets"
authors = ["Hassaan Maan <hurmaan99@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.10.0"
numpy = "^1.22.2"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
Cython = "^0.29.28"
jupyter = "^1.0.0"
ipykernel = "^6.9.1"
jupyterlab = "^3.2.9"
jupyterlab-latex = "^3.1.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
