[tool.poetry]
name = "imbalanced-clustering"
version = "0.1.0"
description = "Clustering metrics for imbalanced datasets"
authors = ["Hassaan Maan <hurmaan99@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.13.3"
scipy = ">=1.4"
scikit-learn = ">=0.22"
pandas = ">=1.0.0"
numba = ">=0.41.0"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
black = ">=22.1.0"
flake8 = ">=3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
